compile_log.txt
cargo :     Checking glassbox 
v0.1.0 (D:\AI and  datascience 
projects\Project 8\glassbox)
At line:1 char:1
+ cargo check --target 
wasm32-unknown-unknown 2>&1 | 
Out-File compile_l ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo          : 
NotSpe    cified: (    Checking 
gl...ect 8    \glassbox):String) 
[], RemoteExc    eption
    + FullyQualifiedErrorId : 
Native    CommandError
 
error[E0525]: expected a closure 
that implements the `Fn` trait, 
but this closure only implements 
`FnOnce`
  --> 
src\components\movie_modal.rs:20:17
   |
20 | /                 view! {
21 | |                     
<leptos::portal::Portal>
22 | |                         
<div class="modal-overlay" 
style="z-index: 99999;" 
on:click=move |_| 
on_close_overlay()>
23 | |                             
<div class="modal-content" 
on:click=|e| e.stop_propagation()>
24 | |                             
    // Close button
25 | |                             
    <button 
class="modal-close-btn" 
on:click=move |_| on_close_btn()>
   | |                             
                                   
                   ------------ 
closure is `FnOnce` because it 
moves the variable `on_close_btn` 
out of its environment
...  |
70 | |                     
</leptos::portal::Portal>
71 | |                 }.into_any()
   | |                 ^
   | |                 |
   | |_________________this 
closure implements `FnOnce`, not 
`Fn`
   |                   the 
requirement to implement `Fn` 
derives from here
   |
   = note: required for 
`TypedChildrenFn<HtmlElement<Div, 
(Style<...>, ..., ...), ...>>` to 
implement `ToChildren<{closure@src\
components\movie_modal.rs:20:17: 
71:18}>`
   = note: the full name for the 
type has been written to 'D:\AI 
and  datascience projects\Project 8
\glassbox\target\wasm32-unknown-unk
nown\debug\deps\glassbox-bde039dc62
851d46.long-type-491120815365249101
6.txt'
   = note: consider using 
`--verbose` to print the full type 
name to the console
   = note: this error originates 
in the macro `view` (in Nightly 
builds, run with -Z 
macro-backtrace for more info)

warning: unused variable: `video`
  --> src\model\video.rs:29:25
   |
29 | pub async fn 
save_video(video: Video) -> 
Result<Video, String> {
   |                         ^^^^^ 
help: if this is intentional, 
prefix it with an underscore: 
`_video`
   |
   = note: 
`#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

For more information about this 
error, try `rustc --explain E0525`.
warning: `glassbox` (bin 
"glassbox") generated 1 warning
error: could not compile 
`glassbox` (bin "glassbox") due to 
1 previous error; 1 warning emitted
